--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
         "@config/*" : ["config/*"],
         "@security/*" : ["security/*"],
         "@logger/*" : ["logger/*"],
+        "@docs/*" : ["docs/*"],
       },                                     
       "types": ["node"],                                     
       "forceConsistentCasingInFileNames": true,           
