--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express-rate-limit": "^7.4.1",
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
+    "http-errors": "^2.0.0",
+    "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^5.0.1",
     "yamljs": "^0.3.0",
@@ -30,6 +32,8 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/hpp": "^0.2.6",
+    "@types/http-errors": "^2.0.4",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.7",
     "@types/swagger-ui-express": "^4.1.6",
