refactor(app): add database and global error handle

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "@security/*" : ["security/*"],
         "@logger/*" : ["logger/*"],
         "@docs/*" : ["docs/*"],
+        "@error/*" : ["error/*"],
       },                                     
       "types": ["node"],                                     
       "forceConsistentCasingInFileNames": true,           
