feat(product): add product zod schema, types, schema and model

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
         "@logger/*" : ["logger/*"],
         "@docs/*" : ["docs/*"],
         "@error/*" : ["error/*"],
+        "@v1/*": ["app/v1/*"],
       },                                     
       "types": ["node"],                                     
       "forceConsistentCasingInFileNames": true,           
