refactor(env): add database related required env variable

--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,10 @@
 # Security settings
 # REQ_LIMIT=500  # Request limit
 # REQ_TIMEFRAME=3000000  # Time frame in milliseconds
+
+
+# Database settings
+# DATABASE_USER=  
+# DATABASE_PASS=
+# DATABASE_URL=
+# DATABASE_NAME=
