--- a/src/app/v1/product/docs.yaml
+++ b/src/app/v1/product/docs.yaml
@@ -51,6 +51,41 @@ paths:
               schema: 
                 $ref: '#/components/schemas/ServerError'
 
+  /product/read:
+    get:
+      tags:
+        - Product 
+      summary:
+        Read All Product 
+      description: This endpoint is used to read All Product in the system 
+
+      responses:
+        '200' : 
+            description: Read successful 
+            content:
+              application/json:
+                schema:
+                  type: object
+                  properties:
+                    status: 
+                      type: string 
+                      default: success 
+                    message: 
+                      type: string
+                      default: 
+                          'Product found Successfully'
+                    products: 
+                        type: array 
+                        items: 
+                          $ref: '#/components/schemas/ProductResponse'
+        '500':
+          description: Server Error
+          content:
+            application/json:
+              schema: 
+                $ref: '#/components/schemas/ServerError'
+            
+                        
 components:
   schemas:
   # Product Input Schemas
@@ -89,6 +124,8 @@ components:
         updatedAt:
           type: string 
           format: date-time
+
+
 
   # Error Schemas
     ZodValidationError:
@@ -137,3 +174,19 @@ components:
       value:
         title: Tshirt 
         price: 500
+    ProductExample: 
+      summary: Product Example 
+      value: 
+          _id: "67187b802898a8832b15acfa"
+          title: "Tshirt"
+          slug: "tshirt-kkcp"
+          price: 500
+          ratting": 
+            count: 0
+            rate: 0
+          createdAt: "2024-10-23T04:28:48.548Z"
+          updatedAt: "2024-10-23T04:28:48.548Z"
+
+
+
+
