--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test:e2e": "jest --detectOpenHandles",
     "lint": "eslint --fix",
     "build": "tsc && tsc-alias",
     "start": "node dist/index.js",
@@ -21,6 +21,7 @@
     "helmet": "^8.0.0",
     "hpp": "^0.2.3",
     "http-errors": "^2.0.0",
+    "mongodb-memory-server": "^10.1.2",
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^5.0.1",
@@ -29,13 +30,16 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
+    "@jest/types": "^29.6.3",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/hpp": "^0.2.6",
     "@types/http-errors": "^2.0.4",
+    "@types/jest": "^29.5.14",
     "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.7.7",
+    "@types/supertest": "^6.0.2",
     "@types/swagger-ui-express": "^4.1.6",
     "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
@@ -45,8 +49,11 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "globals": "^15.11.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
